<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_1"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/main_background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/task_bar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AddTransBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/pen"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/HomeBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/home"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/HistoryBtn"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/HistoryBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/pichart"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/AddTransBtn"
            app:layout_constraintStart_toEndOf="@id/HomeBtn"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/search"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/AddTransBtn"
            app:layout_constraintEnd_toStartOf="@id/SettingBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SettingBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/settings"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/searchBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout2"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.8"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@id/constraintLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/markerfelt"
            android:text="Setting"
            android:textSize="40dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"



            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/infor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/setting_btn"
                    android:padding="20dp"
                    android:text="Information"


                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_btn"
                    android:padding="20dp"
                    android:text="Account"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="10dp"


                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/infor" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Log out"
                android:textAlignment="viewStart"
                android:padding="20dp"
                android:background="@drawable/setting_btn"
                android:layout_marginTop="10dp"

                app:layout_constraintTop_toBottomOf="@id/editAcc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>